Updates for various startup bugs and lspbase.